# MyNote

./: .gitignore  .gitmodules  Readme.md
Audio/: AudioDevelop.md  音频DSP开发笔记.md  音频计算公式.md
Audio/pcmconfigv2_1/: pcmconfigv2_1.xls
Debug/: Debug笔记.md  压栈出栈顺序.drawio
DebugNote/: Debug笔记.md  boot流程.drawio
DebugNote/assets/: SPI从机设计思路.excalidraw
Dev platform/Esp32/: esp32Develop.md
Esp32/: esp32Develop.md
Hardware/PCB/: PCB.md  立创EDA.md
Hardware/模电学习/: 模电学习.md
Industry knowledge/Audio/: 音频计算公式.md
Linux/: Linux notes.md
Linux/doxygenDemo/: Doxyfile  file.c  file.h  main.c  main.h
Linux/driver/: 编写第一个驱动.md
Linux/taispi/: 编译步骤.md
Linux/viNOTE/: vi—终端中的编辑器.md
Open source libraries/: vscode-linux-develop-mcu.code-workspace  vscode-win-develop-mcu.code-workspace  对象字典映射关系.excalidraw  开源库的使用.md
Open source libraries/RT-Thread/: RT-Thread.学习笔记.md
Open source libraries/mcuboot/: mcuboot.md  swap_algorithms.html
Open source libraries/zephyr/: zephyr.md
PCB/: PCB.md  立创EDA.md
RT-Thread/: RT-Thread.学习笔记.md
Tools/: readme.md
Tools/Vs Code/: Vscode学习笔记.md
Tools/git/: github学习笔记.md
Tools/menuconfig/: menuconfg使用.md
Tools/menuconfig/win-testKconfig/: .config  .config.old  CMakeLists.txt  README.md  config.h
Tools/pyocd/: pyocd.md
Tools/qboot_script/: AdiDsp.py  BinMerge.py  Main.py  MakeAll.bat  QBoot.py  Readme.md
Tools/示波器/: MeasureNote.md
USB/: USB.md
Vs Code/: Vscode学习笔记.md
github/: github学习笔记.md
pyocd/: pyocd.md
工具/: readme.md
开源库使用/: 对象字典映射关系.excalidraw  开源库的使用.md
模电学习/: 模电学习.md
脚本/boot和APP打包文件夹/: Readme.md  merge.py  (+1 more)
(+31 files in other folders)
